--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -2,3 +2,40 @@
     font-family: "csgo";
     src: url("../assets/fonts/cs_regular.ttf");
 }
+body{
+    font-family: "csgo";
+    background-image: url("../assets/images/cs_go_wallpaper.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100dvh;
+    width: 100dvw;
+    overflow: hidden;
+}
+#start-button{
+    text-align: center;
+    width: 12dvw;
+    height: 12dvh;
+    border-radius: .2em;
+    background-color: rgba(44, 15, 12, .5);
+    border: none;
+    color: #f5f5f5;
+    backdrop-filter: blur(2px);
+    font-family: "csgo";
+    font-size: 1.7em;
+    cursor: crosshair;
+}
+#start-button:hover{
+    font-size: 1.9em;
+    animation: fadeinfadeout .3s ease-in-out;
+}
+@keyframes fadeinfadeout {
+    0%{
+        font-size: 1.7em;
+    }
+    100%{
+        font-size: 1.9em;
+    }
+}
