fixed some bugs
Fixed the bug where select wont work properly

--- a/stylesheet/agent-select.css
+++ b/stylesheet/agent-select.css
@@ -70,3 +70,8 @@ body{
     border-width: .1em;
     margin: 0 1em 0 1em;
 }
+.active{
+    transform: scale3d(1.2,1.2,1.2);
+    backdrop-filter: blur(10px);
+    transition-duration: 500ms;
+}
