--- a/stylesheet/weapon-select.css
+++ b/stylesheet/weapon-select.css
@@ -119,3 +119,10 @@ body{
     transform: scale(1.1);
     transition-duration: 800ms;
 }
+.balance{
+    box-sizing: border-box;
+    padding-top: .7em;
+    margin-left: 2.5em;
+    margin-bottom: 0;
+    margin-top: 0;
+}
