--- a/stylesheet/weapon-select.css
+++ b/stylesheet/weapon-select.css
@@ -121,8 +121,9 @@ body{
 }
 .balance{
     box-sizing: border-box;
-    padding-top: .7em;
+    padding-top: .2em;
     margin-left: 2.5em;
     margin-bottom: 0;
     margin-top: 0;
+    font-family: "Oswald";
 }
