--- a/stylesheet/team-name-selection.css
+++ b/stylesheet/team-name-selection.css
@@ -28,14 +28,14 @@ body{
 }
 .left-container{
     height: 100%;
-    width: 70%;
+    width: 60%;
     /* background-color: aqua; */
     display: flex;
     align-items: center;
 }
 .right-container{
     height: 100%;
-    width:30%;
+    width:40%;
     /* background-color:bisque; */
     display: flex;
     align-items: center;
@@ -58,6 +58,7 @@ body{
     width: 80%;
     height: 20%;
     backdrop-filter: blur(4px);
+    transition-duration: 500ms;
     background-color: rgba(245, 245, 245, .3);;
     /* background-color: black; */
 }
@@ -78,12 +79,52 @@ body{
 }
 .details-box{
     width: 85%;
-    height: 55%;
-    /* background-color: blue; */
+    height: fit-content;
+    color: #f5f5f5;
+    text-align: justify;
+    backdrop-filter: blur(3px);
+    font-size: 1.5em;
+    padding-left: 1em;
+    transition-duration: 1000ms;
 }
 .team-details{
     width: 85%;
     height: 30%;
     /* background-color: chartreuse; */
     margin: 1em;
+    color: #f5f5f5;
+    font-size: 1.5em;
+}
+#teamNameinput{
+    color: #f5f5f5;
+    width: 80%;
+    height: 10%;
+    padding: .2em;
+    border:none;
+    background-color: #000;
+}
+#createTeam{
+    margin-top: 1em;
+    padding: .2em;
+    font-family: "csgo";
+    color: #000;
+    background-color: rgba(244, 244, 244, .5);
+    width: fit-content;
+    height: 6vh;
+    backdrop-filter: blur(3px);
+    font-size: 1em;
+    transition-duration: 1000ms;
+}
+#createTeam:hover{
+    color: rgb(245, 240, 240);
+    transition-duration: 1000ms;
+    background-color: rgba(0,0,0,.7);
+}
+#errorMessage{
+    padding: 0;
+    margin: 0;
+    background-color: #000;
+    color: red;
+    font-size: 1em;
+    text-align: center;
 }
